fix: syntax error in index.css (missing scrollbar selector)

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -462,6 +462,7 @@
   }
 
   /* Scrollbar */
+  ::-webkit-scrollbar {
     width: 4px;
     height: 4px;
   }
